<resources>
    <string name="app_name">Smart House</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user">User</string>

    <string name="sign_out">Sign Out</string>
    <string name="enter_your_house">Enter Your House</string>
    <string name="new_resident">New Resident</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="your_home">Your Home</string>
    <string name="rooms">ROOMS</string>
    <string name="under_reconstruction">Under reconstruction</string>
    <string name="save">SAVE</string>
    <string name="profile">Profile</string>

    <string name="title_home">Home</string>
    <string name="title_statics">Statics</string>
    <string name="title_routines">Routines</string>
    <string name="title_setting">Setting</string>

    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>

    <string name="add_room">Add Room</string>
    <string name="enter_rooms_name">Enter Room\'s name</string>
    <string name="select_rooms_icon">Select rooms\'s icon</string>

    <string name="kitchen">Kitchen</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="office">Office</string>
    <string name="tv_room">TV Room</string>
    <string name="living_room">Living Room</string>
    <string name="garage">Garage</string>
    <string name="toilet">Toilet</string>
    <string name="kid_room">Kid Room</string>
</resources>