<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobile_02_06.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statics"
        android:name="com.example.mobile_02_06.view.fragment.StaticsFragment"
        android:label="@string/title_statics"
        tools:layout="@layout/fragment_statics" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.example.mobile_02_06.view.fragment.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.mobile_02_06.view.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"/>
</navigation>