<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/filter" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/filter2_corners"
            app:layout_constraintTop_toBottomOf="@id/tvAppName">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/user"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/etUser"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/bEnterYourHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_corners"
            android:text="@string/enter_your_house"
            app:backgroundTint="@color/brown"
            app:layout_constraintTop_toBottomOf="@id/clContent" />

        <Button
            android:id="@+id/bNewResident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_corners"
            android:text="@string/new_resident"
            app:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/bEnterYourHouse" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>