<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.AddRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAddRoomContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="8dp"/>
            <TextView
                android:id="@+id/tvAddRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/add_room"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="12dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/tvEnterRoomsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clAddRoomContent"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:textColor="@color/gray"
            android:text="@string/enter_rooms_name"
            android:textSize="12sp"
            android:layout_marginHorizontal="12dp"/>
        <EditText
            android:id="@+id/etEnterRoomsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvEnterRoomsName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tvSelectRoomsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etEnterRoomsName"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:textColor="@color/gray"
            android:text="@string/select_rooms_icon"
            android:textSize="12sp"
            android:layout_marginHorizontal="12dp"/>
        <ImageView
            android:id="@+id/iv11"
            android:layout_width="120dp"
            android:layout_marginStart="12dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_frame_11"
            app:layout_constraintTop_toBottomOf="@id/tvSelectRoomsIcon"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageView
            android:id="@+id/iv12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_frame_12"
            app:layout_constraintTop_toBottomOf="@id/tvSelectRoomsIcon"
            app:layout_constraintLeft_toRightOf="@id/iv11"
            app:layout_constraintRight_toLeftOf="@id/iv13"/>
        <ImageView
            android:id="@+id/iv13"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_frame_13"
            app:layout_constraintTop_toBottomOf="@id/tvSelectRoomsIcon"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/iv14"
            android:layout_width="120dp"
            android:layout_marginStart="12dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_frame_14"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/iv11"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageView
            android:id="@+id/iv15"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_frame_15"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv12"
            app:layout_constraintLeft_toRightOf="@id/iv11"
            app:layout_constraintRight_toLeftOf="@id/iv13"/>
        <ImageView
            android:id="@+id/iv16"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_frame_16"
            app:layout_constraintTop_toBottomOf="@id/iv13"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/iv17"
            android:layout_width="120dp"
            android:layout_marginStart="12dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_frame_17"
            app:layout_constraintTop_toBottomOf="@id/iv14"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageView
            android:id="@+id/iv18"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_frame_18"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv15"
            app:layout_constraintLeft_toRightOf="@id/iv11"
            app:layout_constraintRight_toLeftOf="@id/iv13"/>
        <ImageView
            android:id="@+id/iv19"
            android:layout_width="120dp"
            android:layout_marginTop="20dp"
            android:layout_height="120dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_frame_19"
            app:layout_constraintTop_toBottomOf="@id/iv16"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>